objects/Product_Feature__c.object
<CustomObject>
    <description>Used by Support in R2</description>
    <fields>
        <fullName>Active_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Product_Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product Feature</label>
        <referenceTo>Product_Feature__c</referenceTo>
        <relationshipLabel>Product Feature (Children)</relationshipLabel>
        <relationshipName>Product_Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Class</label>
        <referenceTo>Product_Class__c</referenceTo>
        <relationshipLabel>Product Features</relationshipLabel>
        <relationshipName>Product_Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Feature_Name_Full__c</fullName>
        <label>Product Feature Name Full</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Feature_Number__c</fullName>
        <displayFormat>PF-{000000}</displayFormat>
        <label>Product Feature Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <description>Used for Case Assignment.  If populated will assign to Queue Name.  Will ignore product agents.  Use Queue API Name and not the label.</description>
        <inlineHelpText>Used for Case Assignment.  If populated will assign to Queue Name.  Will ignore product agents.  Use Queue API Name and not the label.</inlineHelpText>
        <label>Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Id__c</fullName>
        <externalId>true</externalId>
        <label>Row Id</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status DONOT USE Marked for Deletion</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isMigrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Feature</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Features</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>